# crawler-helper

./: .dockerignore  .env.tmp  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.semaphore.yml  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  setup.sh
.semaphore/: semaphore.yml
api2/: serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
collector/: admin.py  models.py  tests.py  urls.py  views.py
collector/management/commands/: updatedb.py
collector/migrations/: 0001_initial.py  0002_auto_20190920_0726.py  0003_auto_20190923_1406.py  0004_auto_20190925_1959.py
collector/parsers/: city.py  mpk_krakow.py  mpk_poznan.py  mpk_wroclaw.py  reader.py  ztm_warszawa.py
collector/test_resources/: mpk_krakow_parse_all_stops.html  mpk_krakow_parse_bus_stop_res.html
crawler/: __init__.py  celery_cfg.py  settings.py  urls.py  wsgi.py
